# SmallVec

./: CMakeLists.txt
project/include/: SmallVec.hpp
project/src/: SmallVec.cpp
project/test/: test.cpp
